--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -9,12 +9,12 @@
     <script src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
 </head>
 
-<body class="company-profile-page">
+<body class="company-tearsheet-page">
     <div class="container_3">
         <div class="row clearfix">
             <div class="grid_3">
                 <img src="img/placeholder-header.jpg">
-                
+
             </div>
         </div>
     </div>
@@ -23,9 +23,12 @@
     <div class="container_3">
         <div class="row">
             <div class="grid_3">
-                <div class="page-title">ABC Financial Corp. (ABC)</div>
+                <div class="page-title companyName">
+                    <!-- ABC Financial Corp. (ABC) -->
+                </div>
                 <div class="stock-price">
-                    <div class="main">S$ 10.06
+                    <div class="main">
+                        <!-- S$ 10.06 -->--.--
                         <span class="change">+0.02</span>
                     </div>
                     <div class="last-updated">Last Price:
@@ -35,7 +38,8 @@
                     </div>
                 </div>
                 <div class="breadcrumb">
-                    <div class="button back-button">Back to Stock Screener</div>
+                    <div class="button back-button"><a href="screener">Back to Stock Screener</a>
+                    </div>
                     <ul class="breadcrumb-tree">
                         <li>Industry Tree:</li>
                         <li><a href="#">Financials</a> &gt;</li>
@@ -55,75 +59,6 @@
             <div class="grid_2">
                 <div id="area-chart"></div>
                 <div id="bar-chart"></div>
-            </div>
-            <div class="grid_1">
-                <div class="module stock-events">
-                    <div class="title">
-                        <div class="label">News</div>
-                    </div>
-                    <ul>
-                        <li>
-                            <div class="icon">A</div><a>ABC Financial A Shares SG $1.03 Dividend...</a>
-                        </li>
-                        <li>
-                            <div class="icon">B</div><a>ABC Financial 2008 FY EPS Up 17% Over 2007 </a>
-                        </li>
-                        <li>
-                            <div class="icon">C</div><a>ABC Financial and XYZ Medical announce strategic partnership</a>
-                        </li>
-                        <li>
-                            <div class="icon">D</div><a>ABC Financial A Shares SG $1.37 Dividend...</a>
-                        </li>
-                        <li>
-                            <div class="icon">E</div><a>ABC Financial Upgraded to "Consider" by Wall Street Weekly</a>
-                        </li>
-                        <li>
-                            <div class="icon">F</div><a>ABC Financial A Shares SG $1.77 Dividend...</a>
-                        </li>
-                        <li>
-                            <div class="icon">G</div><a>ABC Financial Profit Margins Jumps to 11% In Early 2012</a>
-                        </li>
-                        <li>
-                            <div class="icon">H</div><a>ABC Financial See Spike In Volume After Announcing Dividend Increase</a>
-                        </li>
-                        <li>
-                            <div class="icon">I</div><a>ABC Financial A Shares SG $1.99 Dividend...</a>
-                        </li>
-                        <li>
-                            <div class="icon">J</div><a>ABC Financial Market Cap Lead to...</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="module dark-module progress-estimate">
-                    <div class="title">
-                        <div class="label">S&amp;P Capital IQ Consensus Estimates
-                        </div>
-                    </div>
-                    <p class="centered">Consensus Recommendation</p>
-                    <div class="bar-container">
-                        <ul class="progress-mask theme-three-bubble-progress progress-1">
-                            <li>
-                                <span href="">Sell</span>
-                            </li>
-                            <li>
-                                <span href="">Hold</span>
-                            </li>
-                            <li class="last">
-                                <span href="">Buy</span>
-                            </li>
-                        </ul>
-                    </div>
-                    <hr>
-                    <p class="centered">
-                        Consensus Target Price
-                    </p>
-                    <div class="price">$22.10</div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="grid_2">
-                <a href="#" class="test-company">Test Company</a>
                 <div class="module tabbed-content">
                     <ul class="tab-nav">
                         <li>
@@ -147,7 +82,10 @@
                                         <td width="25%">Open Price</td>
                                         <td width="25%" class="openPrice">-</td>
                                         <td width="25%">Day High/Low</td>
-                                        <td width="25%" class="">-</td>
+                                        <td width="25%" class="">
+                                            <span class="highPrice">-</span>/
+                                            <span class="lowPrice">-</span>
+                                        </td>
                                         <!-- <td width="25%">Average 3-month Volume</td>
                                         <td width="25%" class="avgVolumeM3">-</td> -->
                                     </tr>
@@ -161,7 +99,10 @@
                                         <td>Previous Close Date</td>
                                         <td class="previousCloseDate">-</td>
                                         <td>52 Week High/Low</td>
-                                        <td class="custom">yearHigh / yearLow ?</td>
+                                        <td class="custom">
+                                            <span class="yearHigh">-</span>/
+                                            <span class="yearLow">-</span>
+                                        </td>
 
 
                                     </tr>
@@ -177,9 +118,9 @@
                                     </tr>
                                     <tr>
                                         <td>Shares Sold Short</td>
-                                        <td class=""></td>
+                                        <td class="">-</td>
                                         <td>Diluted Normalized EPS</td>
-                                        <td class=""></td>
+                                        <td class="">-</td>
 
                                     </tr>
                                     <tr>
@@ -258,7 +199,7 @@
                                     <tr>
                                         <td width="25%">Top 5 owners by shares held</td>
                                         <td width="25%" class="topHolders">-</td>
-                                        <td width="25%">number of shared held</td>
+                                        <td width="25%">Number of shared held</td>
                                         <td width="25%" class="numberSharesHeld">-</td>
                                     </tr>
                                     <tr>
@@ -277,11 +218,11 @@
                     <div class="title">
                         <div class="label">Company Description</div>
                     </div>
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+                    <div class="content businessDescription">
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
                         </p>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-                        </p>
+                        </p> -->
                     </div>
                 </div>
                 <div class="module dark-module module-info">
@@ -291,38 +232,101 @@
                     <div class="content">
                         <div class="col-1">
                             <h5>Contact</h5>
-                            <p>ABC Financial Corp.
+                            <div class="companyAddress">
+                                <!-- ABC Financial Corp.
                                 <br>123 ABC Highway
                                 <br>Singapore 819829
                                 <br>Singapore (65)
-                                <br>64989700</p>
-                            <a href="http://www.abcfin.com" target="_blank" alt="ABCFin.com" class="link">www.abcfin.com</a>
+                                <br>64989700 -->
+                            </div>
+                            <a href="#" target="_blank" alt="" class="link companyName companyWebsite">
+                                <!-- www.abcfin.com -->
+                            </a>
                         </div>
                         <div class="col-2">
                             <h5># of Employees</h5>
-                            <p>2,356</p>
+                            <div>
+                                <!-- 2,356 -->
+                            </div>
                             <br>
                             <h5>Current Fiscal Year End</h5>
-                            <p>31 December 2014</p>
+                            <div class="fiscalYearEnd">
+                                <!-- 31 December 2014 -->
+                            </div>
                         </div>
                         <div class="col-3">
                             <h5>Year Founded</h5>
-                            <p>1966</p>
+                            <div class="yearFounded">
+                                <!-- 1966 -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="grid_1">
+                <div class="module stock-events">
+                    <div class="title">
+                        <div class="label">News</div>
+                    </div>
+                    <ul>
+                        <li>
+                            <div class="icon">A</div><a>ABC Financial A Shares SG $1.03 Dividend...</a>
+                        </li>
+                        <li>
+                            <div class="icon">B</div><a>ABC Financial 2008 FY EPS Up 17% Over 2007 </a>
+                        </li>
+                        <li>
+                            <div class="icon">C</div><a>ABC Financial and XYZ Medical announce strategic partnership</a>
+                        </li>
+                        <li>
+                            <div class="icon">D</div><a>ABC Financial A Shares SG $1.37 Dividend...</a>
+                        </li>
+                        <li>
+                            <div class="icon">E</div><a>ABC Financial Upgraded to "Consider" by Wall Street Weekly</a>
+                        </li>
+                        <li>
+                            <div class="icon">F</div><a>ABC Financial A Shares SG $1.77 Dividend...</a>
+                        </li>
+                        <li>
+                            <div class="icon">G</div><a>ABC Financial Profit Margins Jumps to 11% In Early 2012</a>
+                        </li>
+                        <li>
+                            <div class="icon">H</div><a>ABC Financial See Spike In Volume After Announcing Dividend Increase</a>
+                        </li>
+                        <li>
+                            <div class="icon">I</div><a>ABC Financial A Shares SG $1.99 Dividend...</a>
+                        </li>
+                        <li>
+                            <div class="icon">J</div><a>ABC Financial Market Cap Lead to...</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="module dark-module progress-estimate">
+                    <div class="title">
+                        <div class="label">S&amp;P Capital IQ Consensus Estimates
+                        </div>
+                    </div>
+                    <p class="centered">Consensus Recommendation</p>
+                    <div class="bar-container">
+                        <ul class="progress-mask theme-three-bubble-progress progress-1">
+                            <li>
+                                <span href="">Sell</span>
+                            </li>
+                            <li>
+                                <span href="">Hold</span>
+                            </li>
+                            <li class="last">
+                                <span href="">Buy</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <hr>
+                    <p class="centered">
+                        Consensus Target Price
+                    </p>
+                    <div class="price">$22.10</div>
+                </div>
                 <div class="module dark-module alpha-factors">
-
-                    <!-- analystExpectations": int,
-                "capitalEfficiency": int,
-                "earningsQuality": int,
-                "historicalGrowth": int,
-                "priceMomentum": int,
-                "size": int,
-                "valuation": int,
-                "volatility": int -->
                     <div class="title">
                         <div class="label label-small label-info">S&amp;P Capital IQ Alpha Factor Composites</div>
                     </div>
@@ -412,6 +416,14 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="grid_2">
+
+            </div>
+            <div class="grid_1">
+
             </div>
         </div>
     </div>
