--- a/trunk/client/index.html
+++ b/trunk/client/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="screener">Screener</a>
                     </li>
-                    <li><a href="company-profile">Company Profile</a>
+                    <li><a href="company-tearsheet">Company Tearsheet</a>
                     </li>
                     <li><a href="financials">Financials</a>
                     </li>
@@ -33,7 +33,7 @@
                 <ul>
                     <li><a href="screener.html">Screener</a>
                     </li>
-                    <li><a href="company-profile.html">Company Profile</a>
+                    <li><a href="company-tearsheet.html">Company Profile</a>
                     </li>
                     <li><a href="financials.html">Financials</a>
                     </li>
