--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -91,7 +91,7 @@
                                     </tr>
                                     <tr>
                                         <td>Volume</td>
-                                        <td class="volume">-</td>
+                                        <td class="volume" data-unit="mil">-</td>
                                         <td>Previous Close</td>
                                         <td class="previousClosePrice">-</td>
                                     </tr>
@@ -131,7 +131,7 @@
                                     </tr>
                                     <tr>
                                         <td>Float %</td>
-                                        <td class="">-</td>
+                                        <td class="" data-unit="percent">-</td>
                                     </tr>
                                     </tobdy>
                             </table>
@@ -148,7 +148,7 @@
                                     </tr>
                                     <tr>
                                         <td>Dividend Yield</td>
-                                        <td class="dividendYield">-</td>
+                                        <td class="dividendYield" data-unit="percent">-</td>
                                         <td>EV/EBITDA</td>
                                         <td class="evEbitData">-</td>
                                     </tr>
@@ -169,17 +169,17 @@
                                         <td>Total Debt</td>
                                         <td class="">-</td>
                                         <td>EBIT</td>
-                                        <td class="ebit">-</td>
+                                        <td class="ebit" data-unit="mil">-</td>
                                     </tr>
                                     <tr>
                                         <td>Enterprise Value</td>
                                         <td class="enterpriseValue">-</td>
                                         <td>Total Revenue</td>
-                                        <td class="totalRevenue">-</td>
+                                        <td class="totalRevenue" data-unit="mil">-</td>
                                     </tr>
                                     <tr>
                                         <td>Total Assets</td>
-                                        <td class="totalAssets">-</td>
+                                        <td class="totalAssets" data-unit="mil">-</td>
                                         <td>Net Income</td>
                                         <td class="netIncome">-</td>
                                     </tr>
@@ -187,7 +187,7 @@
                                         <td>Cash &amp; ST Investments</td>
                                         <td class="cashInvestments">-</td>
                                         <td>EBITDA</td>
-                                        <td class="ebitda">-</td>
+                                        <td class="ebitda" data-unit="mil">-</td>
                                     </tr>
                                     </tobdy>
                             </table>
