--- a/trunk/client/index.html
+++ b/trunk/client/index.html
@@ -149,7 +149,7 @@
                                 <div class="trigger">Total Market Cap</div>
                                 <input type="checkbox">
                             </div>
-                            <div class="checkbox" data-type="percent" data-name="percentChange"  data-display="true" data-short-name="% Change">
+                            <div class="checkbox" data-type="percent" data-name="percentChange"  data-display="true" data-short-name="% Change" data-search-required="true">
                                 <div class="trigger">% Change over date range up to 1 year</div>
                                 <input type="checkbox">
                             </div>
